<resources>
    <string name="app_name">Location-based AR Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quests">Quests</string>
    <string name="map">Map</string>
    <string name="play">Play</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="profile">Profile</string>
    <string name="studyass">Study\nAssocations</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_with_google_to_play_ut_go">Log in with your Google account to play UT GO!</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="choose_a_username">Choose a username</string>
    <string name="username_should_be_between_3_and_15_characters">Username should be between 3 and 15 characters</string>


    <!-- CRASH REPORTS -->
    <string name="crash_toast_text">UTGO Crashed D: sending crash report.</string>
    <string name="crash_toast_success">Sending crash report success :)</string>
    <string name="crash_toast_failure">Sending crash report failed :(</string>
    <string name="utgomail">utgo.game@gmail.com</string>
    <string name="crash_trace_fname">UTGOCrash.json</string>
    <string name="crash_mail_subject">UTGOCRASH</string>
    <string name="crash_mail_body">Dear students,\n\nHere is the crash report\n\nKind regards,\nUTGO</string>
</resources>