<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/quests"
        android:title="@string/quests"
        android:icon="@drawable/ic_outline_check_24" />
    <item
        android:id="@+id/map"
        android:title="@string/map"
        android:icon="@drawable/ic_outline_place_24" />
    <item
        android:id="@+id/play"
        android:title="@string/play"
        android:icon="@drawable/ic_outline_camera_alt_24" />
    <item
        android:id="@+id/leaderboards"
        android:title="@string/leaderboards"
        android:icon="@drawable/ic_outline_leaderboard_24" />
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_outline_person_24"/>

</menu>